# tsutsumu

./: .gitignore  README.md  can.py  pyproject.toml  runtest.py  test.py
bundles/: bundler.py  can.py  tsutsumu.py
cargo/: _infinity.py  distinfo.py  index.py  marker.py  name.py  requirement.py  version.py  version.pyi
spam/: __init__.py  __main__.py  bacon.py  ham.html
test/: cargo_extra.py  cargo_version.py  console.py
tsutsumu/: __main__.py  bundle.py  debug.py  dist_info.py  maker.py  requirement.py
tsutsumu/distribution/: __init__.py  distinfo.py  marker.py  requirement.py  util.py
