[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "tsutsumu"
description = "Simple, flexible module bundling for Python"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache 2.0"}
authors = [{name = "Robert Grimm", email = "rgrimm@alum.mit.edu"}]
keywords = ["bundler", "source code bundle", "module bundle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: File Formats",
    "Topic :: Home Automation",
    "Topic :: Internet",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
]
dependencies = ["packaging"]
dynamic = ["version"]

[project.optional-dependencies]

dev = [
    "mypy",
    "flit",
    "vermin",
    "black",
]

[project.urls]
homepage = "https://github.com/apparebit/tsutsumu"
repository = "https://github.com/apparebit/tsutsumu"

[project.scripts]
tsutsumu = "tsutsumu.__main__:main"

[tool.mypy]
python_version = "3.11"
files = ["tsutsumu/*.py", "cargo/*.py", "runtest.py"]
warn_unused_configs = true
disallow_any_unimported = true
# disallow_any_expr = true   # mypy just isn't strong enough
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
allow_redefinition = true
strict_equality = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tmp.*"
follow_imports = "silent"

[tool.black]
target-version = ['py311']
skip-string-normalization = true
